--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,10 +73,6 @@ jobs:
         toolchain: [ "", "-T ClangCL" ]
         extra-cmake-flags: [ "" ]
         include:
-          - os: windows-2019
-            generator: Visual Studio 16 2019
-          - os: windows-2016
-            generator: Visual Studio 15 2017
           - os: windows-2016
             build-type: Release
             arch: x64
@@ -91,7 +87,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Configure CMake
       run: >
-        cmake -B ${{github.workspace}}/build -G \"${{ matrix.generator }}\"
+        cmake -B ${{github.workspace}}/build 
         -A ${{ matrix.arch }}
         ${{ matrix.toolchain }}
         ${{ matrix.extra-cmake-flags }}
