--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
         # Build each combination of OS and release/debug variants
         os: [ windows-2016, windows-2019 ]
         build-type: [ Release, Debug ]
-        arch: [ x86, x64 ]
+        arch: [ Win32, x64 ]
         toolchain: [ "", "-T ClangCL" ]
         extra-cmake-flags: [ "" ]
         include:
@@ -82,17 +82,12 @@ jobs:
       # Don't abort runners if a single one fails
       fail-fast: false
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} ${{ matrix.build-type }} ${{ matrix.toolchain }} ${{ matrix.variant }}
+    name: ${{ matrix.os }} ${{ matrix.arch }} ${{ matrix.build-type }} ${{ matrix.toolchain }} ${{ matrix.variant }}
     steps:
     - uses: actions/checkout@v2
     - name: Configure CMake
-      run: >
-        cmake -B ${{github.workspace}}/build 
-        -A ${{ matrix.arch }}
-        ${{ matrix.toolchain }}
-        ${{ matrix.extra-cmake-flags }}
-        -DSNMALLOC_CI_BUILD=On
-        -DSNMALLOC_RUST_SUPPORT=On
+      run: |
+        cmake -B ${{github.workspace}}/build -A ${{ matrix.arch }} ${{ matrix.toolchain }} ${{ matrix.extra-cmake-flags }} -DSNMALLOC_CI_BUILD=On -DSNMALLOC_RUST_SUPPORT=On
       # Build with a nice ninja status line
     - name: Build
       run: cmake --build ${{github.workspace}}/build -- /m /p:Configuration=${{ matrix.build-type }}
