--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,10 +104,11 @@ jobs:
       # Install the dependencies and clang 13.  Earlier versions of clang don't
       # find the multilib things for this week's Ubuntu filesystem layout.
       run: |
-        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 13
         sudo apt install libstdc++-9-dev-${{ matrix.arch }}-cross qemu-user ninja-build lld-13 clang-13
         sudo ln -s /usr/${{ matrix.triple }}/lib/ld-linux-* /lib/
-
     - name: Configure
       run: AARCH=${{ matrix.arch }} TRIPLE=${{ matrix.triple}} cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja -DSNMALLOC_CI_BUILD=ON -DSNMALLOC_QEMU_WORKAROUND=ON -DSNMALLOC_STATIC_LIBRARY=OFF -DCMAKE_TOOLCHAIN_FILE=ci/Toolchain.cmake
     - name: Build
