--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,10 +127,13 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: NINJA_STATUS="%p [%f:%s/%t] %o/s, %es" ninja
       # If the tests are enabled for this job, run them
+    - name: Debugging
+      working-directory: ${{github.workspace}}/build
+      run: file func-malloc-1
     - name: Test
       if: ${{ matrix.build-only != 'yes' }}
       working-directory: ${{github.workspace}}/build
-      run: ctest --output-on-failure -j 4
+      run: ctest --output-on-failure -j 4 -VV
 
   windows:
     strategy:
