--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,7 +131,7 @@ jobs:
     # QEMU)
     - name: Test
       working-directory: ${{github.workspace}}/build
-      run: ctest --output-on-failure -j 4 -VV -E '(perf-.*)|(.*-malloc$)'
+      run: ctest --output-on-failure -E '(perf-.*)|(.*-malloc$)'
       timeout-minutes: 30
 
   windows:
