Run things as root that need root.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,9 +106,9 @@ jobs:
       # Install the dependencies and clang 13.  Earlier versions of clang don't
       # find the multilib things for this week's Ubuntu filesystem layout.
       run: |
-        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
-        add-apt-repository "deb http://apt.llvm.org/focal/     llvm-toolchain-focal-13  main"
-        apt update
+        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+        sudo add-apt-repository "deb http://apt.llvm.org/focal/     llvm-toolchain-focal-13  main"
+        sudo apt update
         sudo apt install libstdc++-9-dev-${{ matrix.arch }}-cross qemu-user ninja-build clang-13 lld-13
     - name: Configure
       run: >
