--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.8)
-project(snmalloc C CXX)
+cmake_minimum_required(VERSION 3.14)
+project(snmalloc CXX)
 
 if (NOT CMAKE_BUILD_TYPE)
   message(STATUS "No build type selected, default to: Release")
@@ -7,7 +7,8 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 include(CheckCXXCompilerFlag)
-include(CheckCSourceCompiles)
+include(CheckCXXSourceCompiles)
+include(CheckLinkerFlag)
 
 option(USE_SNMALLOC_STATS "Track allocation stats" OFF)
 option(SNMALLOC_CI_BUILD "Disable features not sensible for CI" OFF)
@@ -18,14 +19,20 @@ option(SNMALLOC_STATIC_LIBRARY   "Build static libraries" ON)
 option(SNMALLOC_QEMU_WORKAROUND "Disable using madvise(DONT_NEED) to zero memory on Linux" Off)
 option(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE "Compile for current machine architecture" Off)
 set(SNMALLOC_STATIC_LIBRARY_PREFIX "sn_" CACHE STRING "Static library function prefix")
+option(SNMALLOC_HEADER_ONLY_LIBRARY "Use snmalloc has a header-only library" OFF)
 option(SNMALLOC_USE_CXX17 "Build as C++17 for legacy support." OFF)
 option(SNMALLOC_USE_PTHREAD_DESTRUCTORS "Build using pthread destructors. Reduces the system dependencies, but may interact badly with C++ on some platforms." OFF)
 
+# Define a generator expression for things that will be enabled in either CI
+# builds or debug mode.
+set(ci_or_debug "$<OR:$<BOOL:${SNMALLOC_CI_BUILD}>,$<CONFIG:Debug>>")
+
 # malloc.h will error if you include it on FreeBSD, so this test must not
 # unconditionally include it.
-CHECK_C_SOURCE_COMPILES("
+CHECK_CXX_SOURCE_COMPILES("
 #if __has_include(<malloc_np.h>)
 #include <malloc_np.h>
+#endif
 #if __has_include(<malloc/malloc.h>)
 #include <malloc/malloc.h>
 #else
@@ -35,9 +42,9 @@ size_t malloc_usable_size(const void* ptr) { return 0; }
 int main() { return 0; }
 " CONST_QUALIFIED_MALLOC_USABLE_SIZE)
 
-# older libcs might not have getentropy, e.g. it appeared in gliobc 2.25
+# Some libcs might not have getentropy, e.g. it appeared in glibc 2.25
 # so we need to fallback if we cannot compile this
-CHECK_C_SOURCE_COMPILES("
+CHECK_CXX_SOURCE_COMPILES("
 #if __has_include(<unistd.h>)
 #  include <unistd.h>
 #endif
@@ -51,8 +58,11 @@ int main() {
 }
 " SNMALLOC_PLATFORM_HAS_GETENTROPY)
 
-# Provide as macro so other projects can reuse
-macro(warnings_high)
+# Provide as function so other projects can reuse
+# FIXME: This modifies some variables that may or may not be the ones that
+# provide flags and so is broken by design.  It should be removed once Verona
+# no longer uses it.
+function(warnings_high)
   if(MSVC)
     # Force to always compile with W4
     if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
@@ -68,9 +78,9 @@ macro(warnings_high)
     endif ()
     add_compile_options(-Wall -Wextra -Werror -Wundef)
   endif()
-endmacro()
+endfunction()
 
-macro(clangformat_targets)
+function(clangformat_targets)
   # The clang-format tool is installed under a variety of different names.  Try
   # to find a sensible one.  Only look for versions 9 explicitly - we don't
   # know whether our clang-format file will work with newer versions of the
@@ -95,118 +105,86 @@ macro(clangformat_targets)
       -i
       ${ALL_SOURCE_FILES})
   endif()
-endmacro()
+endfunction()
 
-# Have to set this globally, as can't be set on an interface target.
+# The main target for snmalloc.  This is the exported target for the
+# header-only configuration and is used as a dependency for all of the builds
+# that compile anything.
+add_library(snmalloc INTERFACE)
+
 if(SNMALLOC_USE_CXX17)
-  set(CMAKE_CXX_STANDARD 17)
+  target_compile_definitions(snmalloc INTERFACE -DSNMALLOC_USE_CXX17)
+  target_compile_features(snmalloc INTERFACE cxx_std_17)
 else()
-  set(CMAKE_CXX_STANDARD 20)
+  target_compile_features(snmalloc INTERFACE cxx_std_20)
 endif()
 
-# The main target for snmalloc
-add_library(snmalloc_lib INTERFACE)
-target_include_directories(snmalloc_lib INTERFACE src/)
-
-if(SNMALLOC_USE_CXX17)
-  target_compile_definitions(snmalloc_lib INTERFACE -DSNMALLOC_USE_CXX17)
-endif()
+# Add header paths.
+target_include_directories(snmalloc
+  INTERFACE
+    $<INSTALL_INTERFACE:include/snmalloc>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
 
 if(NOT MSVC)
-  find_package(Threads REQUIRED COMPONENTS snmalloc_lib)
-  target_link_libraries(snmalloc_lib INTERFACE ${CMAKE_THREAD_LIBS_INIT})
-  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    target_link_libraries(snmalloc_lib INTERFACE atomic)
-  endif()
+  find_package(Threads REQUIRED COMPONENTS snmalloc)
+  target_link_libraries(snmalloc INTERFACE
+    ${CMAKE_THREAD_LIBS_INIT} $<$<CXX_COMPILER_ID:GNU>:atomic>)
 endif()
 
 if (WIN32)
   set(WIN8COMPAT FALSE CACHE BOOL "Avoid Windows 10 APIs")
-  if (WIN8COMPAT)
-    target_compile_definitions(snmalloc_lib INTERFACE -DWINVER=0x0603)
-    message(STATUS "snmalloc: Avoiding Windows 10 APIs")
-  else()
-    message(STATUS "snmalloc: Using Windows 10 APIs")
-    # VirtualAlloc2 is exposed by mincore.lib, not Kernel32.lib (as the
-    # documentation says)
-    target_link_libraries(snmalloc_lib INTERFACE mincore)
-  endif()
+  target_compile_definitions(snmalloc INTERFACE $<$<BOOL:${WIN8COMPAT}:WINVER=0x0603>)
+  # VirtualAlloc2 is exposed by mincore.lib, not Kernel32.lib (as the
+  # documentation says)
+  target_link_libraries(snmalloc INTERFACE $<$<NOT:$<BOOL:${WIN8COMPAT}>>:mincore>)
+  message(STATUS "snmalloc: Avoiding Windows 10 APIs is ${WIN8COMPAT}")
 endif()
 
-# detect support for cmpxchg16b; werror is needed to make sure mcx16 must be used by targets
+# Detect support for cmpxchg16b; Werror is needed to make sure mcx16 must be used by targets
 check_cxx_compiler_flag("-Werror -Wextra -Wall -mcx16" SNMALLOC_COMPILER_SUPPORT_MCX16)
 if(SNMALLOC_COMPILER_SUPPORT_MCX16)
-  target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
+  target_compile_options(snmalloc INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
 endif()
 
-if(USE_SNMALLOC_STATS)
-  target_compile_definitions(snmalloc_lib INTERFACE -DUSE_SNMALLOC_STATS)
+# Helper function that conditionally defines a macro for the build target if
+# the CMake variable of the same name is set.
+function(add_as_define FLAG)
+  target_compile_definitions(snmalloc INTERFACE $<$<BOOL:${${FLAG}}>:${FLAG}>)
+endfunction()
+
+add_as_define(USE_SNMALLOC_STATS)
+add_as_define(SNMALLOC_QEMU_WORKAROUND)
+add_as_define(SNMALLOC_CI_BUILD)
+add_as_define(SNMALLOC_PLATFORM_HAS_GETENTROPY)
+add_as_define(SNMALLOC_USE_PTHREAD_DESTRUCTORS)
+target_compile_definitions(snmalloc INTERFACE $<$<BOOL:CONST_QUALIFIED_MALLOC_USABLE_SIZE>:MALLOC_USABLE_SIZE_QUALIFIER=const>)
+
+# In debug and CI builds, link the backtrace library so that we can get stack
+# traces on errors.
+find_package(Backtrace)
+if(${Backtrace_FOUND})
+  target_compile_definitions(snmalloc INTERFACE
+    $<${ci_or_debug}:SNMALLOC_BACKTRACE_HEADER="${Backtrace_HEADER}">)
+  target_link_libraries(snmalloc INTERFACE
+    $<${ci_or_debug}:${Backtrace_LIBRARIES}>)
+  target_include_directories(snmalloc INTERFACE
+    $<${ci_or_debug}:${Backtrace_INCLUDE_DIRS}>)
 endif()
 
-if(SNMALLOC_QEMU_WORKAROUND)
-  target_compile_definitions(snmalloc_lib INTERFACE -DSNMALLOC_QEMU_WORKAROUND)
-endif()
-
-if(SNMALLOC_CI_BUILD)
-  target_compile_definitions(snmalloc_lib INTERFACE -DSNMALLOC_CI_BUILD)
-endif()
-
-if(SNMALLOC_PLATFORM_HAS_GETENTROPY)
-  target_compile_definitions(snmalloc_lib INTERFACE -DSNMALLOC_PLATFORM_HAS_GETENTROPY)
-endif()
-
-if(SNMALLOC_USE_PTHREAD_DESTRUCTORS)
-  target_compile_definitions(snmalloc_lib INTERFACE -DSNMALLOC_USE_PTHREAD_DESTRUCTORS)
-endif()
-
-if(CONST_QUALIFIED_MALLOC_USABLE_SIZE)
-  target_compile_definitions(snmalloc_lib INTERFACE -DMALLOC_USABLE_SIZE_QUALIFIER=const)
-endif()
-
-
-# To build with just the header library target define SNMALLOC_ONLY_HEADER_LIBRARY
-# in containing Cmake file.
-if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
-
-  warnings_high()
-
-  if(MSVC)
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
-    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG")
-    target_compile_definitions(snmalloc_lib INTERFACE -D_HAS_EXCEPTIONS=0)
-    add_compile_options(/std:c++latest)
-  else()
-    add_compile_options(-fno-exceptions -fno-rtti -fomit-frame-pointer -ffunction-sections)
-    # Static TLS model is unsupported on Haiku.
-    # All symbols are always dynamic on haiku and -rdynamic is redundant (and unsupported).
-    if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
-	    add_compile_options(-ftls-model=initial-exec)
-    	    if(SNMALLOC_CI_BUILD OR (${CMAKE_BUILD_TYPE} MATCHES "Debug"))
-      		  # Get better stack traces in CI and Debug.
-      		  target_link_libraries(snmalloc_lib INTERFACE "-rdynamic")
-            add_compile_options(-g)
-    	    endif()
-    endif()
-
-    if(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE)
-      check_cxx_compiler_flag(-march=native SUPPORT_MARCH_NATIVE)
-      if (SUPPORT_MARCH_NATIVE)
-        add_compile_options(-march=native)
-      else()
-        message(WARNING "Compiler does not support `-march=native` required by SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE")
-      endif()
-    endif()
-
-    find_package(Backtrace)
-    if(${Backtrace_FOUND})
-      target_compile_definitions(snmalloc_lib INTERFACE -DBACKTRACE_HEADER="${Backtrace_HEADER}")
-      target_link_libraries(snmalloc_lib INTERFACE ${Backtrace_LIBRARIES})
-      target_include_directories(snmalloc_lib INTERFACE ${Backtrace_INCLUDE_DIRS})
-    endif()
-
+if(MSVC)
+  target_compile_definitions(snmalloc INTERFACE -D_HAS_EXCEPTIONS=0)
+else()
+  if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
+    # Get better stack traces in CI and debug builds.
+    target_link_options(snmalloc INTERFACE $<${ci_or_debug}:-rdynamic>)
   endif()
+endif()
 
-  macro(subdirlist result curdir)
+
+# To build with just the header library target define SNMALLOC_HEADER_ONLY_LIBRARY
+if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
+
+  function(subdirlist result curdir)
     file(GLOB children CONFIGURE_DEPENDS LIST_DIRECTORIES true RELATIVE ${curdir} ${curdir}/* )
     set(dirlist "")
     foreach(child ${children})
@@ -214,43 +192,70 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
         list(APPEND dirlist ${child})
       endif()
     endforeach()
-    set(${result} ${dirlist})
-  endmacro()
+    set(${result} ${dirlist} PARENT_SCOPE)
+  endfunction()
 
-  if(CMAKE_VERSION VERSION_LESS 3.14)
-    set(CMAKE_REQUIRED_LIBRARIES -fuse-ld=lld)
-  else()
-    set(CMAKE_REQUIRED_LINK_OPTIONS -fuse-ld=lld)
-  endif()
+  set(CMAKE_REQUIRED_LINK_OPTIONS -fuse-ld=lld)
   check_cxx_source_compiles("int main() { return 1; }" LLD_WORKS)
+  if (LLD_WORKS)
+    message(STATUS "Using LLD to link snmalloc shims")
+  endif()
 
-  macro(add_shim name type)
+  function(add_shim name type)
     add_library(${name} ${type} ${ARGN})
-    target_link_libraries(${name} snmalloc_lib)
-    if(NOT MSVC)
-      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
-    endif()
+    target_link_libraries(${name} snmalloc)
     set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
-    # Ensure that we do not link against C++ stdlib when compiling shims.
-    if(NOT MSVC)
-      set_target_properties(${name} PROPERTIES LINKER_LANGUAGE C)
-      if (LLD_WORKS)
-        message("Using LLD.")
+    if(MSVC)
+      target_compile_options(${name} /Zi /W4 /WX /wd4127 /wd4324 /wd4201)
+      set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG")
+    else()
+      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
+      target_compile_options(${name} PRIVATE
+        -fno-exceptions -fno-rtti -fomit-frame-pointer -ffunction-sections
+        -Wall -Wextra -Werror -Wundef
+        $<$<CXX_COMPILER_ID:Clang>:-Wsign-conversion -Wconversion>)
+      # Static TLS model is unsupported on Haiku.
+      # All symbols are always dynamic on haiku and -rdynamic is redundant (and unsupported).
+      if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
+        target_compile_options(${name} PRIVATE -ftls-model=initial-exec)
+        target_compile_options(${name} PRIVATE $<$<BOOL:${SNMALLOC_CI_BUILD}>:-g>)
+      endif()
+
+      if(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE)
+        check_cxx_compiler_flag(-march=native SUPPORT_MARCH_NATIVE)
+        if (SUPPORT_MARCH_NATIVE)
+          target_compile_options(${name} -march=native)
+        else()
+          message(WARNING "Compiler does not support `-march=native` required by SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE")
+        endif()
+      endif()
+
+      # Ensure that we do not link against C++ stdlib when compiling shims.
+      # If the compiler supports excluding the C++ stdlib implementation, use
+      # it.  Otherwise, fall back to linking the library as if it were C, which
+      # has roughly the same effect.
+      check_linker_flag(CXX "-nostdlib++" SNMALLOC_LINKER_SUPPORT_NOSTDLIBXX)
+      if (SNMALLOC_LINKER_SUPPORT_NOSTDLIBXX)
+        target_link_options(${name} PRIVATE -nostdlib++)
+      else()
+        enable_language(C)
+        set_target_properties(${name} PROPERTIES LINKER_LANGUAGE C)
+      endif()
 
         # Only include the dependencies that actually are touched.
         # Required so C++ library is not included with direct pthread access.
-        target_link_libraries(${name} -Wl,--as-needed)
-
+        target_link_options(${name} PRIVATE $<$<BOOL:${LLD_WORKS}>:-Wl,--as-needed>)
         # Remove all the duplicate new/malloc and free/delete definitions
-        target_link_libraries(${name} -Wl,--icf=all -fuse-ld=lld)
-      endif()
+        target_link_options(${name} PRIVATE $<$<BOOL:${LLD_WORKS}>:-Wl,--icf=all -fuse-ld=lld>)
     endif()
 
-  endmacro()
+    install(TARGETS ${name} EXPORT snmallocConfig)
+
+  endfunction()
 
   if (SNMALLOC_STATIC_LIBRARY)
-    add_shim(snmallocshim-static STATIC src/override/malloc.cc)
+    add_shim(snmallocshim-static STATIC src/override/new.cc)
     target_compile_definitions(snmallocshim-static PRIVATE
             SNMALLOC_STATIC_LIBRARY_PREFIX=${SNMALLOC_STATIC_LIBRARY_PREFIX})
   endif ()
@@ -274,6 +279,7 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
   subdirlist(TEST_CATEGORIES ${TESTDIR})
   list(REVERSE TEST_CATEGORIES)
   foreach(TEST_CATEGORY ${TEST_CATEGORIES})
+    message(STATUS "Adding ${TEST_CATEGORY} tests")
     subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
     foreach(TEST ${TESTS})
       if (WIN32
@@ -301,31 +307,31 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
         if (${FLAVOUR} STREQUAL "check")
           target_compile_definitions(${TESTNAME} PRIVATE SNMALLOC_CHECK_CLIENT)
         endif()
-        target_link_libraries(${TESTNAME} snmalloc_lib)
+        target_link_libraries(${TESTNAME} snmalloc)
         if (${TEST} MATCHES "release-.*")
-          message(STATUS "Adding test: ${TESTNAME} only for release configs")
+          message(VERBOSE "Adding test: ${TESTNAME} only for release configs")
           add_test(NAME ${TESTNAME} COMMAND ${TESTNAME} CONFIGURATIONS "Release")
         else()
-          message(STATUS "Adding test: ${TESTNAME}")
+          message(VERBOSE "Adding test: ${TESTNAME}")
           add_test(${TESTNAME} ${TESTNAME})
         endif()
         if (${TEST_CATEGORY} MATCHES "perf")
-          message(STATUS "Single threaded test: ${TESTNAME}")
+          message(VERBOSE "Single threaded test: ${TESTNAME}")
           set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
         endif()
         if(WIN32)
           # On Windows these tests use a lot of memory as it doesn't support
           # lazy commit.
           if (${TEST} MATCHES "two_alloc_types")
-            message(STATUS "Single threaded test: ${TESTNAME}")
+            message(VERBOSE "Single threaded test: ${TESTNAME}")
             set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
           endif()
           if (${TEST} MATCHES "fixed_region")
-            message(STATUS "Single threaded test: ${TESTNAME}")
+            message(VERBOSE "Single threaded test: ${TESTNAME}")
             set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
           endif()
           if (${TEST} MATCHES "memory")
-            message(STATUS "Single threaded test: ${TESTNAME}")
+            message(VERBOSE "Single threaded test: ${TESTNAME}")
             set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
           endif()
         endif()
@@ -338,3 +344,23 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
 
   clangformat_targets()
 endif()
+
+install(TARGETS snmalloc EXPORT snmallocConfig)
+
+install(TARGETS EXPORT snmallocConfig DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/snmalloc)
+
+install(DIRECTORY src/aal DESTINATION include/snmalloc)
+install(DIRECTORY src/ds DESTINATION include/snmalloc)
+install(DIRECTORY src/override DESTINATION include/snmalloc)
+install(DIRECTORY src/backend DESTINATION include/snmalloc)
+install(DIRECTORY src/mem DESTINATION include/snmalloc)
+install(DIRECTORY src/pal DESTINATION include/snmalloc)
+install(FILES src/snmalloc.h;src/snmalloc_core.h;src/snmalloc_front.h DESTINATION include/snmalloc)
+
+install(EXPORT snmallocConfig
+  FILE snmalloc-config.cmake
+  NAMESPACE snmalloc::
+  DESTINATION "share/snmalloc"
+)
+
